content/_generated-doc/2.7/config/quarkus-micrometer-config-group-config-json-config-group.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-micrometer-config-group-config-json-config-group_configuration]]link:#quarkus-micrometer-config-group-config-json-config-group_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-json-config-group_quarkus.micrometer.export.json.enabled]]`link:#quarkus-micrometer-config-group-config-json-config-group_quarkus.micrometer.export.json.enabled[quarkus.micrometer.export.json.enabled]`

[.description]
--
Support for export to JSON format. Off by default.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-json-config-group_quarkus.micrometer.export.json.path]]`link:#quarkus-micrometer-config-group-config-json-config-group_quarkus.micrometer.export.json.path[quarkus.micrometer.export.json.path]`

[.description]
--
The path for the JSON metrics endpoint. The default value is `metrics`.
--|string 
|`metrics`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-json-config-group_quarkus.micrometer.export.json.buffer-length]]`link:#quarkus-micrometer-config-group-config-json-config-group_quarkus.micrometer.export.json.buffer-length[quarkus.micrometer.export.json.buffer-length]`

[.description]
--
Statistics like max, percentiles, and histogram counts decay over time to give greater weight to recent samples. Samples are accumulated to such statistics in ring buffers which rotate after the expiry, with this buffer length.
--|int 
|`3`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-json-config-group_quarkus.micrometer.export.json.expiry]]`link:#quarkus-micrometer-config-group-config-json-config-group_quarkus.micrometer.export.json.expiry[quarkus.micrometer.export.json.expiry]`

[.description]
--
Statistics like max, percentiles, and histogram counts decay over time to give greater weight to recent samples. Samples are accumulated to such statistics in ring buffers which rotate after this expiry, with a particular buffer length.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`P3D`

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
